# bard

./: .gitignore  AGENTS.md  README.md  _design.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: docs-pages.yml
bard/: __init__.py  app.py  di.py  errors.py  extractors.py  form.py  handler.py  request.py  response.py  router.py  router.pyx  testing.py  utils.py  websocket.py
docs/: advanced-legacy.md  advanced.md  api.md  development.md  getting-started.md  guide.md  index.md
docs/advanced/: asgi.md  composition.md  conversion.md  index.md  lifespan.md  memory.md  routing.md  testclient.md
docs/concepts/: di.md  extractors.md  middleware.md  responses.md  routing.md  websocket.md
docs/howto/: errors.md  testing.md
docs/reference/: api.md  app.md  di.md  errors.md  extractors.md  index.md  middleware.md  public-api.md  request.md  responses.md  router.md  testing.md  websocket.md
docs/stylesheets/: just-the-docs.css
docs/troubleshooting/: di.md  http.md  index.md  testing.md  websocket.md
examples/: README.md  dependencies.py  forms_files.py  middleware.py  middleware_example.py  quickstart.py  simple_asgi_app.py  streaming.py  subrouter.py  websocket.py
tests/: __init__.py  conftest.py  test_app_response.py  test_benchmark.py  test_di.py  test_edge_cases.py  test_exception_handlers.py  test_extractors.py  test_form.py  test_handler.py  test_lifespan.py  test_memory_usage.py  test_middleware.py  test_path_normalization.py  test_request.py  test_route_finding.py  test_route_iteration.py  test_route_registration.py  test_router.py  test_router_middleware.py  test_testclient.py  test_utils.py  test_websocket.py
