[build-system]
requires = ["setuptools>=42", "wheel", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bard"
version = "0.0.1"
description = "高效能 Cython ASGI Trie Router - 專為 ASGI 應用程式設計的快速路徑匹配引擎"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Cython ASGI Team", email = "example@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

# [project.urls]
# "Homepage" = "https://github.com/example/cython_asgi_router"
# "Bug Tracker" = "https://github.com/example/cython_asgi_router/issues"

[tool.setuptools]
packages = ["bard"]

[tool.setuptools.package-data]
bard = ["*.pyx", "*.pxd"]

[tool.pytest]
testpaths = ["tests"]

[tool.uv]
packages = ["cython", "pytest", "pytest-benchmark", "pytest-cov"]

[dependency-groups]
dev = [
    "cython>=3.1.0",
    "setuptools>=75.3.2",
]
