[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bard"
version = "0.1.0"
description = "Next-gen ASGI framework prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "msgspec",
    "pydantic>=2",
    "uvicorn",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[dependency-groups]
dev = ["pytest", "pytest-cov"]
